Added licence and made changes in Appointment and doctor